[package]
name = "mocker"
version = "0.1.4"
authors = ["inxaneninja <inxaneninja@gmail.com>"]
edition = "2018"
description = "A library for transforming text with uppercase and lowercase letters, resembling the Spongebob Mock Meme."
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/mocker/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"